--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=chrome">
-    <title>Hooper</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Beach-Van</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -24,6 +24,8 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="magic.js"></script>
 
 </body>
 </html>
